除算時の挙動について　追加

--- a/PowerShell/除算時の挙動について.md
+++ b/PowerShell/除算時の挙動について.md
@@ -2,12 +2,17 @@
 
 言語ごとに除算時の挙動は異なるがPowerShellの場合のそれについて学んだのでまとめ
 
-## まとめ
+- [PowerShellの除算時の挙動](#powershellの除算時の挙動)
+  - [1.1. まとめ](#11-まとめ)
+  - [1.2. 詳細](#12-詳細)
+  - [1.3. 課題](#13-課題)
+
+## 1.1. まとめ
 - 通常時は解が小数なら小数で出る（切り捨てない）
 - 出力をint型にすると解が小数の場合は四捨五入される
 - 切り捨てたい場合は[Math]をつかう
 
-## 詳細
+## 1.2. 詳細
 
 以下の2つの演算を考える
 ```console
@@ -40,5 +45,5 @@
 [int][Math]::Round(28 / 8, 1) #4 小数第二位で四捨五入(小数第一位まで出力)
 ```
 
-## 課題 
+## 1.3. 課題 
 以外にこういう基本的なところは思い込みで済ませてはまったりしがち 
